<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:title="@string/action_search"
    app:showAsAction="ifRoom"
    android:icon="@drawable/ic_search" />

    <item
        android:title="@string/action_new_group"
        app:showAsAction="never"
        android:orderInCategory="1" />

    <item
        android:title="@string/action_new_broadcast"
        app:showAsAction="never"
        android:orderInCategory="2" />

    <item
        android:title="@string/action_whatsapp_web"
        app:showAsAction="never"
        android:orderInCategory="3" />

    <item
        android:title="@string/action_starred_messages"
        app:showAsAction="never"
        android:orderInCategory="4" />

    <item
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:orderInCategory="5" />


</menu>