<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chat_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        tools:src="@drawable/goku" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_chat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                tools:text="@string/chat_name_1" />

            <TextView
                android:id="@+id/tv_chat_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textSize="12sp"
                tools:text="@string/chat_time_1" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_chat_message"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="16sp"
                tools:text="@string/chat_text_1" />

            <TextView
                android:id="@+id/tv_unread_messages"
                android:layout_width="18dp"
                android:layout_height="18dp"
                tools:text="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="10sp"
                android:fontFamily="sans-serif-light"
                android:layout_marginRight="4dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:background="@drawable/circle"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>